[package]
name = "wallet-cli"
version = "0.2.2"
edition = "2024"
license = "MIT"

[dependencies]
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
borsh = "1.6"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
hex = "0.4"
getrandom = "0.3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }
paqus = "=0.2.5"
