[package]
name = "wallet-cli"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "Command-line wallet for the Paqus blockchain"
readme = "README.md"
repository = "https://github.com/paqusprotocol/wallet"

[dependencies]
borsh = "1.6"
hex = "0.4"
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
paqus = "0.2.13"

[workspace]
resolver = "3"
